update style: fix pb blue for contrast

--- a/style.css
+++ b/style.css
@@ -970,7 +970,7 @@ ol li ol{
 /* 2.3. Pagebreaks, linebreaks, linenumbers */
 
 .pb-title{
-	color: #428bca;
+	color: #2e68ac;
 	font-size: .9em;
 	font-family: "source sans pro", calibri, arial, helvetica, sans-serif;
 	text-decoration: none;
